# llm-text-compression

./: .gitignore  DEPLOY.md  PORT_CONFIGURATION.md  README-JS.md  README-VISUALIZER.md  README.md  RESULTS.md  ROUND_TRIP_SUCCESS.md  compression_pipeline.py  create_graphs.py  huffman_compression.py  llm_ranker.py  main.py  package-lock.json  package.json  pyproject.toml  rank_visualizer.py  test-runner.js  test_flask_app.py  test_rank_visualizer.py  test_ranker.py
.github/workflows/: deploy.yml
datasets/: bbc-yachts.txt  gemini-artificial-intelligence.txt  gemini-stock-market.txt  hamlet.txt
javascript/: README.md  index.html  package-lock.json  package.json  server.js  test-real-roundtrip.js  visualizer-client.html  vite.config.js
javascript/src/: benchmark.js  compression-pipeline.js  index.js  llm-ranker.js  ranker-cache.js
javascript/src/test/: compression-pipeline.test.js  huffman-compression.test.js
python/: README.md  compression_pipeline.py  llm_ranker.py  main.py  parameter_analysis.py  pyproject.toml  rank_visualizer.py  ranker_cache.py  start_ui.py  test_ranker.py
python/templates/: index.html
src/: compression-pipeline.js  huffman-compression.js  llm-ranker.js
src/test/: llm-ranker.test.js
templates/: index.html
