[project]
name = "llm-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "torch>=2.0.0",
    "transformers>=4.20.0",
    "dahuffman>=0.4.1",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]
